-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.9.0-beta1
-
Ubuntu 16.04 x64
-
-
6c4c5cbe1c673cdd4df39fae57160775a84d2389 (qt-creator/qt-creator/4.9)
Compared to Creator 4.8, we encounter problems deploying to remote Linux. Breaking down this to minimal examples takes time, but a simple console program that can be deployed without problems on Creator 4.8 gives error on 4.9-beta.
Creator 4.8.0 Deploy Output:
15:23:38: Running steps for project ScpiService... 15:23:38: Configuration unchanged, skipping qmake step. 15:23:38: Starting: "/usr/bin/make" -j16 make: Nothing to be done for 'first'. 15:23:38: The process "/usr/bin/make" exited normally. 15:23:38: The remote file system has 34 megabytes of free space, going ahead. 15:23:38: Deploy step finished. 15:23:38: Uploading file "/home/ah/git/build-isegScpiService-Qt_5_9_2_ARM-Debug/ScpiService/ScpiService"... 15:23:39: All files successfully deployed. 15:23:39: Deploy step finished. 15:23:39: Elapsed time: 00:00.
Creator 4.9-beta1 Deploy Output:
15:25:29: Running steps for project ScpiService... 15:25:29: Configuration unchanged, skipping qmake step. 15:25:29: Starting: "/usr/bin/make" -j16 make: Nothing to be done for 'first'. 15:25:29: The process "/usr/bin/make" exited normally. 15:25:29: Connecting to device 'Apalis' (192.168.16.80) 15:25:41: The remote file system has 34 megabytes of free space, going ahead. 15:25:41: Deploy step finished. 15:25:41: 1 file(s) need to be uploaded. 15:25:41: sftp> -mkdir /15:25:41: sftp> -mkdir /usr15:25:41: sftp> -mkdir /usr/bin 15:25:41: sftp> put /home/ah/git/build-isegScpiService-Qt_5_9_2_ARM-Debug/ScpiService/ScpiService /usr/bin/ScpiService 15:25:42: Unexpected stat output for remote file "/usr/bin/ScpiService": /usr/bin/ScpiService 1723192 3382 81ed 0 0 b303 76400 1 0 0 1550759412 1551107526 1551107526 1024 15:25:42: All files successfully deployed. 15:25:42: Deploy step finished. 15:25:42: Elapsed time: 00:12.
At least the file seems to exist afterwards (I removed it in a shell and verified it was created), and I was able to run it, but the red error messages creates a bad taste.
- relates to
-
QTCREATORBUG-22030 [REG 4.8.1 -> 4.9] No password input field in Remote Linux Devices settings page
-
- Closed
-
-
QTCREATORBUG-22471 [4.8 -> 4.9] Generic Linux device connection test hangs at SFTP checking step
-
- Closed
-
-
QTCREATORBUG-22603 [REG 4.8 -> 4.9, 4.10] Remote Linux deployment problems: Unexpected stat output for remote file
-
- Closed
-