RemoteLinux: Fix off-by-one error in parsing stat output

Change-Id: I9a3564fc724d5c19d9c0a34298a92b31833096ee
Fixes: QTCREATORBUG-22041
Reviewed-by: André Hartmann <aha_1980@gmx.de>