src/plugins/remotelinux/genericdirectuploadservice.cpp
@@ -153,7 +153,7 @@ QDateTime GenericDirectUploadService::timestampFromStat(const DeployableFile &fi
         return QDateTime();
     }
     const QByteArrayList columns = output.mid(file.remoteFilePath().toUtf8().size() + 1).split(' ');
-    if (columns.size() < 15) { // Normal Linux stat: 16 columns, busybox stat: 15 columns
+    if (columns.size() < 14) { // Normal Linux stat: 16 columns in total, busybox stat: 15 columns
         emit warningMessage(warningString);
         return QDateTime();
     }
